<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="432dp"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/dp_10"
    android:layout_marginRight="@dimen/dp_10"
    android:paddingStart="@dimen/dp_30"
    android:paddingEnd="@dimen/dp_30"
    android:paddingTop="@dimen/dp_20"
    android:background="@drawable/shape_wash_car_nearby"
    android:paddingBottom="@dimen/dp_20">

    <TextView
        android:id="@+id/id_name_CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/color_main_white"
        android:textSize="@dimen/sp_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/id_email_CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="2"
        android:ellipsize="end"
        android:layout_marginTop="@dimen/dp_08"
        android:textColor="@color/color_ACAFB8"
        android:textSize="@dimen/sp_28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_name_CardView"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_02"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/color_section_title_divider"
        app:layout_constraintBottom_toTopOf="@+id/id_email_CardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/id_email_CardView"
        app:layout_constraintTop_toBottomOf="@+id/id_email_CardView"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/tvDistance"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_37"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/distance"
        android:textAlignment="textStart"
        android:textColor="@color/color_ACAFB8"
        android:textSize="@dimen/sp_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/tvStationDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_km"
        android:textColor="@color/color_main_white"
        android:textSize="@dimen/sp_28"
        app:layout_constraintBottom_toBottomOf="@+id/tvDistance"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_37"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/test_92"
        android:textAlignment="textStart"
        android:textColor="@color/color_ACAFB8"
        android:textSize="@dimen/sp_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDistance" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_92p"
        android:textColor="@color/color_main_white"
        android:textSize="@dimen/sp_28"
        app:layout_constraintBottom_toBottomOf="@+id/tvNumber"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/tvStationNav"
        android:layout_width="@dimen/dp_146"
        android:layout_height="@dimen/dp_60"
        android:gravity="center"
        android:text="@string/nav"
        android:textColor="@color/color_main_white"
        android:textSize="@dimen/sp_30"
        android:background="@drawable/common_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/tvStationFueling"
        android:layout_width="@dimen/dp_160"
        android:layout_height="@dimen/dp_60"
        android:gravity="center"
        android:text="@string/fueling"
        android:textColor="@color/color_main_white"
        android:textSize="@dimen/sp_30"
        android:background="@drawable/common_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvStationNav"/>
</androidx.constraintlayout.widget.ConstraintLayout>


